--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "lucide-react": "^0.553.0",
     "next": "15.5.5",
     "react": "19.1.0",
+    "react-countup": "^6.5.3",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.66.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^10.0.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
